remove content-visibility fix #86

--- a/assets/css/layout/single-article.scss
+++ b/assets/css/layout/single-article.scss
@@ -2,9 +2,6 @@ article {
 	margin: 5em auto;
 	width: 80%;
 	overflow-wrap: break-word;
-	p, h1, h2, h3, h4, h5, h6 {
-		content-visibility: auto;
-	}
 	p, .kg-image-card {
 		.orig-link {
 			display: inline-block;
